fix overflow table

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,8 @@
 
-@import "{{ site.theme }}";
+@import "minima/base",
+"minima/layout",
+"minima/syntax-highlighting";
+
 .table-wrapper {
     overflow-x: scroll;
   }
